src/assets/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  * {
    @apply box-border;
  }

  body {
    @apply text-base leading-relaxed text-obsidian bg-lavender;
  }

  /* Headings */
  h1 {
    @apply text-5xl font-bold leading-none md:leading-tight mb-6 md:mb-12 xl:mb-14 2xl:mb-16 md:text-6xl lg:text-7xl;
  }

  h2 {
    @apply text-4xl font-bold mt-8 mb-5 md:text-5xl lg:text-6xl leading-tight;
  }

  h3 {
    @apply text-3xl font-bold mt-6 mb-4 md:text-4xl lg:text-5xl lg:leading-tight;
  }

  h4 {
    @apply text-2xl md:text-3xl lg:text-4xl font-bold leading-snug lg:leading-tight mt-6 mb-4;
  }
  h5 {
    @apply text-xl md:text-2xl lg:text-3xl font-bold leading-relaxed mt-5 mb-3;
  }

  h6 {
    @apply text-lg md:text-xl lg:text-2xl font-bold leading-snug mt-5 mb-3;
  }

  p {
    @apply [&:not(:last-child)]:mb-5;
  }

  small {
    @apply text-sm mb-4;
  }

  em {
    @apply italic;
  }

  strong {
    @apply font-bold;
  }

  a {
    @apply underline font-semibold hover:text-obsidian-500 active:no-underline;
  }
}

@layer components {
  /* Hero Area Begins */
  .hero {
    @apply px-5 md:px-16
      mx-auto
      pb-12 md:pb-24
      min-h-80vh
      xl:max-w-screen-2xl
      md:mb-40 xl:mb-60;
  }

  .hero h1 {
    @apply font-black leading-none mb-4;
    font-size: clamp(2.8rem, 6.5vw + 1rem, 7rem);
  }

  .hero .top-line {
    @apply text-xl sm:text-2xl lg:text-3xl xl:text-4xl;
  }

  .hero p {
    @apply mb-20;
  }
  /* Hero Area Ends */

  .button {
    @apply no-underline relative bg-obsidian text-cream rounded-full w-full sm:w-auto text-center sm:text-left transition-colors duration-300 hover:bg-obsidian-600 hover:shadow-md-flat-r hover:shadow-obsidian;
  }

  .button:hover {
    @apply text-cream;
  }

  .button::before {
    @apply absolute inset-0 rounded-full border-4 border-transparent transition-all duration-300;
    content: "";
  }

  .button:hover::before {
    @apply border-obsidian;
  }

  .button:hover,
  .button {
    transition: box-shadow 0.3s ease-in-out;
  }

  .button.button-large {
    @apply text-lg font-medium px-10 py-4;
  }

  .button.button-small {
    @apply text-sm font-medium px-8 py-3;
  }

  /* Windows Begin */
  .window-rounded {
    @apply rounded-xl shadow-obsidian overflow-hidden;
    box-shadow: 12px 12px 0;
  }

  .window-rounded.border {
    @apply border-8 border-obsidian;
  }

  .window-rounded.window-rounded-margins {
    @apply p-4 lg:p-6;
  }
  /* Windows End */

  /* Contact Begins */
  .contact-button {
    @apply rounded-xl border-6 px-6 py-4 mb-8 border-cream shadow-cream transition-colors duration-300 hover:text-obsidian-400 hover:bg-lime-300 overflow-hidden;
    box-shadow: 8px 8px 0 #fff6ee;
  }

  .contact-button h5 {
    @apply m-0 max-md:text-3xl;
  }

  /* Contact Ends */

  /* Work Cards Begin */
  .card {
    @apply bg-cream first:max-sm:ml-5 last:max-sm:mr-8 max-sm:flex-shrink-0 max-sm:w-10/12 max-sm:max-w-md col-span-12 grid grid-cols-12 gap-x-6;
  }

  .card > .card-illustration {
    @apply bg-purple-300 col-span-12 sm:col-span-4 lg:col-span-5 min-h-40 max-sm:h-52 bg-top lg:bg-center bg-no-repeat bg-cover;
  }

  .card > .card-contents {
    @apply max-sm:ml-4 mr-4 lg:mr-6 my-4 lg:my-6 col-span-12 sm:col-span-8 lg:col-span-7 sm:pt-0 flex flex-col items-start justify-start;
  }

  .card > .card-contents .category {
    @apply text-sm uppercase font-bold;
  }

  .card > .card-contents h5 {
    @apply mt-0 max-sm:text-xl max-sm:leading-tight;
  }

  .card p {
    @apply text-sm leading-normal lg:text-base mb-4;
  }

  .card > .card-contents .button {
    @apply self-start mt-4 md:mt-6;
  }
  /* Work Cards End */

  /* Brands Begins */
  .brands {
    @apply px-6 py-12 md:px-8 md:py-14 xl:px-10 xl:py-16 grid gap-4 md:gap-14 grid-cols-2 sm:grid-cols-3 md:grid-cols-5 xl:grid-cols-5;
  }

  .brands-logo {
    @apply h-14 md:h-16 lg:h-20 max-w-4/6 md:max-w-5/6 object-contain mx-auto;
  }
  /* Brands End */

  /* Services Begins */
  .services h5 {
    @apply max-md:text-2xl;
  }

  .services p {
    @apply mb-0;
  }

  /* Footer Begins */
  footer.footer-global {
    @apply mt-8 lg:pt-16 py-0 pb-0 grid grid-cols-1 sm:grid-cols-3 md:grid-cols-5 lg:text-lg leading-loose;
  }

  .footer-global a,
  .nav a {
    @apply no-underline;
  }

  .footer-global a:hover,
  .nav a:hover {
    @apply transition-colors duration-200 text-cream font-bold;
    transition: font-weight 0.3 ease-in-out;
  }
  /* Footer Ends */
}

@layer utilities {
  .columns {
    @apply grid grid-cols-1 sm:grid-cols-2 gap-12;
  }

  .columns.columns-third {
    @apply lg:grid-cols-[1fr_2fr];
  }

  /* Sets default margins for site sections/footers/etc */
  .global-margins {
    @apply pt-36
    sm:pt-16
      lg:pt-36
      2xl:pt-48
      pb-8
      lg:pb-10
      2xl:pb-24
      px-5
      md:px-16
      xl:max-w-screen-2xl
      mx-auto;
  }

  .pic-tall {
    @apply mt-10 sm:mt-0 lg:-mt-60 w-9/12 md:w-10/12 lg:w-9/12 xl:w-3/5 h-fit;
  }

  .pic-tall img {
    @apply w-full h-auto;
  }

  .p-bigger {
    @apply text-lg md:text-xl lg:text-2xl lg:leading-normal [&:not(:last-child)]:mb-6 md:[&:not(:last-child)]:mb-8 lg:[&:not(:last-child)]:mb-10;
  }

  .p-smaller {
    @apply text-sm lg:text-base mb-4;
  }

  .disabled {
    @apply opacity-25;
  }
}

